# UltraTrace

./: ,  .flake8  .gitignore  AUTHORS  README.md  SOURCES.TextGrid  UltraTrace.py  UltraTrace.py.lprof  get_font.py  gui-test.py  install  install.sh  integration-test.py  logo.xcf  markCoordinates.py  markCoordinatesOO.py  metadata.json  mypy.ini  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  stft2level.c  stft2level.pyx  test.py
.circleci/: config.yml
app/: .eslintrc.yml  package.json  tsconfig.json  webpack.config.js
app/src/main/: main.ts
app/src/renderer/: index.html  index.tsx  (+1 more)
dev/: US2textgrid.py  env.sh  gui-mock.html  gui-mock.tkml  rest-api-spec.md
scripts/: convert-dicom-to-png  download-test-data  hash-path  upload-test-data
test/p00/: 20150629171639.TextGrid  20150629171639.flac  metadata.json
ultratrace/: __main__.py  app.py  main.py  utils.py
ultratrace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ultratrace/gui/: __init__.py  themes.py
ultratrace/gui2/: __init__.py  layout.tkml  tkom.py
ultratrace/io_/: __init__.py
ultratrace/model/: __init__.py  files.py  metadata.py  project.py  traces.py  undo.py  xhairs.py
ultratrace/model2/: participant.py  project.py  trace.py
ultratrace/modules/: __init__.py  base.py  control.py  crosshairs.py  dicom.py  framereader.py  logging.py  metadata.py  panels.py  playback.py  search.py  spectrogram.py  textgrid.py  trace.py
ultratrace/old/: UltraTrace.py.bak  condensed.py
ultratrace/util/: __init__.py  framereader.py  keys.py  logging.py
ultratrace/widgets/: __init__.py  canvas_tooltip.py  crosshairs.py  header.py  rect_tracker.py  zoom_frame.py
ultratrace2/: __main__.py  app.py
ultratrace2/gui/: __init__.py  themes.py
ultratrace2/model/: color.py  project.py  trace.py  xhair.py
ultratrace2/old/: UltraTrace.py
ultratrace2/server/: __init__.py  project_cache.py  routes.py  validate.py  views.py
ultratrace2/tests/: test_app.py
(+85 files in other folders)
