# Configuration file for how to "build" our package.
#
# See also: https://setuptools.readthedocs.io/en/latest/build_meta.html
# See also: https://www.python.org/dev/peps/pep-0517/

[build-system]
requires = [
    "setuptools==65.5.0",
    "wheel==0.38.0",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
check_untyped_defs = true
