[metadata]
name = ultratrace
version = 0.9.1
description = A tool for manually annotating ultrasound tongue imaging (UTI) data
long_description = file: README.md
url = https://github.com/SwatPhonLab/UltraTrace
maintainer = Jonathan Washington
maintainer_email = jwashin1@swarthmore.edu
license = GPL v3 License
license_files =
  LICENSE

[options]
package_dir =
  =.
packages = find_namespace:
zip_safe = false

python_requires = >= 3.7
install_requires =
  matplotlib>=3.1.2
  numpy>=1.17.4
  Pillow>=6.2.1
  praat-parselmouth>=0.4.0
  PyAudio==0.2.11
  pydicom>=1.3.0
  pydub==0.23.1
  TextGrid==1.5
  ttkthemes==2.4.0
  xparser==0.0.4
  python-magic>=0.4.13

[options.extras_require]
dev =
  flake8
  black
  mypy
  pytest

[options.entry_points]
console_scripts =
  ultratrace = ultratrace.__main__:main
