[metadata]
name = ultratrace
version = 0.9.1
description = A tool for manually annotating ultrasound tongue imaging (UTI) data
long_description = file: README.md
url = https://github.com/SwatPhonLab/UltraTrace
maintainer = Jonathan Washington
maintainer_email = jwashin1@swarthmore.edu
license = GPL v3 License
license_files =
  LICENSE

[options]
package_dir =
  =.
packages = find_namespace:
zip_safe = false

python_requires = >= 3.7
install_requires =
  matplotlib
  numpy
  Pillow
  praat-parselmouth
  PyAudio
  pydicom
  pydub
  TextGrid
  ttkthemes
  xparser
  python-magic

[options.extras_require]
dev =
  flake8
  black
  mypy
  pytest

[options.entry_points]
console_scripts =
  ultratrace = ultratrace.__main__:main
